css de los testimonios

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,16 @@ html, body{
 
 }
 
+.contenedor-principal{
+
+    min-height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+}
+
 h1{
     max-width: 940px;
     font-size: 2.5em;
